<resources>
    <string name="app_name">AdminPannel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">ADD Product</string>
    <string name="add_slider">ADD Slider</string>
    <string name="all_orders_details">All Orders Details</string>
    <string name="upload_slider">Upload Slider</string>
    <string name="loading">Loading...</string>
    <string name="image">image</string>
    <string name="upload_category">Upload Category</string>
    <string name="category_name">Category Name</string>
    <string name="textview">TextView</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_sp">Product SP</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="select_product_image">Select Product Image</string>
    <string name="testing">Testing</string>
</resources>