<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddProductFragment">


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/product_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productDescriptionEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/product_mrp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productMrpEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/product_sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productSpEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="none"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectCoverImg"
            android:layout_margin="10dp"
            android:text="@string/select_cover_image"
            android:textAllCaps="false"/>
        <ImageView
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/product_cover_img"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productImgBtn"
            android:layout_margin="10dp"
            android:text="@string/select_product_image"
            android:textAllCaps="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_img_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:listitem="@layout/image_item" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:layout_margin="10dp"
            android:text="@string/add_product"
            android:textAllCaps="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>